# iLidl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  context7.json  pyproject.toml
.github/workflows/: publish.yml
ilidl/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py  models.py  parser.py
tests/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_parser.py
tests/fixtures/: receipt_gb_sample.json
