[project]
name = "ilidl"
version = "0.1.0"
description = "Unofficial Lidl Plus API client"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "click",
    "tomli_w",
]

[project.optional-dependencies]
auth = ["playwright"]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
ilidl = "ilidl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
