[project]
name = "ilidl"
dynamic = ["version"]
description = "Unofficial Lidl Plus API client"
readme = "README.md"
license = "MIT"
keywords = ["lidl", "lidl-plus", "receipts", "coupons", "api-client"]
authors = [{ name = "RoryDotGG" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "click",
    "tomli_w",
]

[project.optional-dependencies]
auth = ["playwright"]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/RoryDotGG/iLidl"
Repository = "https://github.com/RoryDotGG/iLidl"
Issues = "https://github.com/RoryDotGG/iLidl/issues"

[project.scripts]
ilidl = "ilidl.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
